--- a/src/en.lproj/MainWindow.xib
+++ b/src/en.lproj/MainWindow.xib
@@ -45,7 +45,7 @@
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 			</object>
 			<object class="IBUIToolbar" id="10342245">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">266</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -59,6 +59,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{6, 0}, {170, 44}}</string>
 								<reference key="NSSuperview" ref="398656380"/>
+								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -75,6 +76,7 @@
 						</object>
 						<string key="NSFrame">{{60, 0}, {180, 44}}</string>
 						<reference key="NSSuperview" ref="10342245"/>
+						<reference key="NSWindow"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4yNDg0MzI5OSAwLjQ2OTY4MTkyIDEgMAA</bytes>
@@ -82,7 +84,9 @@
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 					</object>
 				</object>
-				<string key="NSFrame">{{0, 416}, {320, 44}}</string>
+				<string key="NSFrameSize">{320, 44}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 				<object class="NSMutableArray" key="IBUIItems">
@@ -127,10 +131,10 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 				</object>
 			</object>
-			<object class="IBUICustomObject" id="815927283"/>
-			<object class="IBUICustomObject" id="527616134"/>
-			<object class="IBUICustomObject" id="856664051"/>
-			<object class="IBUICustomObject" id="297345178"/>
+			<object class="IBUICustomObject" id="1061950094"/>
+			<object class="IBUICustomObject" id="711100591"/>
+			<object class="IBUICustomObject" id="998985087"/>
+			<object class="IBUICustomObject" id="651608659"/>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<object class="NSMutableArray" key="connectionRecords">
@@ -163,30 +167,30 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">appController</string>
 						<reference key="source" ref="664661524"/>
-						<reference key="destination" ref="815927283"/>
+						<reference key="destination" ref="1061950094"/>
 					</object>
 					<int key="connectionID">42</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">serverPersistentStore</string>
-						<reference key="source" ref="815927283"/>
-						<reference key="destination" ref="527616134"/>
+						<reference key="source" ref="1061950094"/>
+						<reference key="destination" ref="711100591"/>
 					</object>
 					<int key="connectionID">43</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">serverSelector</string>
-						<reference key="source" ref="815927283"/>
-						<reference key="destination" ref="856664051"/>
+						<reference key="source" ref="1061950094"/>
+						<reference key="destination" ref="998985087"/>
 					</object>
 					<int key="connectionID">46</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">navigationController</string>
-						<reference key="source" ref="856664051"/>
+						<reference key="source" ref="998985087"/>
 						<reference key="destination" ref="701001926"/>
 					</object>
 					<int key="connectionID">47</int>
@@ -194,34 +198,42 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="856664051"/>
-						<reference key="destination" ref="815927283"/>
+						<reference key="source" ref="998985087"/>
+						<reference key="destination" ref="1061950094"/>
 					</object>
 					<int key="connectionID">48</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="297345178"/>
-						<reference key="destination" ref="815927283"/>
+						<reference key="source" ref="651608659"/>
+						<reference key="destination" ref="1061950094"/>
 					</object>
 					<int key="connectionID">50</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">projectSelector</string>
-						<reference key="source" ref="815927283"/>
-						<reference key="destination" ref="297345178"/>
+						<reference key="source" ref="1061950094"/>
+						<reference key="destination" ref="651608659"/>
 					</object>
 					<int key="connectionID">51</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">navigationController</string>
-						<reference key="source" ref="297345178"/>
+						<reference key="source" ref="651608659"/>
 						<reference key="destination" ref="701001926"/>
 					</object>
 					<int key="connectionID">52</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">toolbar</string>
+						<reference key="source" ref="664661524"/>
+						<reference key="destination" ref="10342245"/>
+					</object>
+					<int key="connectionID">53</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -331,22 +343,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">35</int>
-						<reference key="object" ref="815927283"/>
+						<reference key="object" ref="1061950094"/>
 						<reference key="parent" ref="957960031"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">36</int>
-						<reference key="object" ref="527616134"/>
+						<reference key="object" ref="711100591"/>
 						<reference key="parent" ref="957960031"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">45</int>
-						<reference key="object" ref="856664051"/>
+						<reference key="object" ref="998985087"/>
 						<reference key="parent" ref="957960031"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">49</int>
-						<reference key="object" ref="297345178"/>
+						<reference key="object" ref="651608659"/>
 						<reference key="parent" ref="957960031"/>
 					</object>
 				</object>
@@ -361,6 +373,7 @@
 					<string>2.IBAttributePlaceholdersKey</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
+					<string>24.IBEditorWindowLastContentRect</string>
 					<string>24.IBPluginDependency</string>
 					<string>26.IBPluginDependency</string>
 					<string>27.IBPluginDependency</string>
@@ -397,6 +410,7 @@
 					</object>
 					<string>{{357, 490}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>{{21, 1067}, {320, 44}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -438,7 +452,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">52</int>
+			<int key="maxID">53</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -476,6 +490,7 @@
 							<string>appController</string>
 							<string>navigationController</string>
 							<string>serverSelector</string>
+							<string>toolbar</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -483,6 +498,7 @@
 							<string>BuildWatchAppController</string>
 							<string>UINavigationController</string>
 							<string>NSObject</string>
+							<string>UIToolbar</string>
 							<string>UIWindow</string>
 						</object>
 					</object>
