--- a/src/en.lproj/MainWindow.xib
+++ b/src/en.lproj/MainWindow.xib
@@ -161,14 +161,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">serverPersistentStore</string>
-						<reference key="source" ref="1061950094"/>
-						<reference key="destination" ref="711100591"/>
-					</object>
-					<int key="connectionID">43</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">serverSelector</string>
 						<reference key="source" ref="1061950094"/>
 						<reference key="destination" ref="998985087"/>
@@ -238,6 +230,14 @@
 						<reference key="destination" ref="1008333446"/>
 					</object>
 					<int key="connectionID">56</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">persistentStore</string>
+						<reference key="source" ref="1061950094"/>
+						<reference key="destination" ref="711100591"/>
+					</object>
+					<int key="connectionID">57</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -433,7 +433,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>BuildWatchAppController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>MockServerPersistentStore</string>
+					<string>MockBuildWatchPersistentStore</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIServerSelector</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -465,7 +465,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">56</int>
+			<int key="maxID">57</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -478,8 +478,8 @@
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>buildService</string>
+							<string>persistentStore</string>
 							<string>projectSelector</string>
-							<string>serverPersistentStore</string>
 							<string>serverSelector</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -543,11 +543,11 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">MockServerPersistentStore</string>
+					<string key="className">MockBuildWatchPersistentStore</string>
 					<string key="superclassName">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/MockServerPersistentStore.h</string>
+						<string key="majorKey">IBUserSource</string>
+						<string key="minorKey"/>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
